--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <!-- home -->
 <div class="ui main text container">
-    <div class="ui huge header">Xiang <span>(Tommy)</span> Yue (岳 翔)</div>
+    <div class="ui huge header">Xiang Yue (岳 翔)</div>
     <div class="ui section divider"></div>
     <div class="ui top attached">
 
@@ -86,22 +86,35 @@
                     I am currently a final year PhD student working with <a
                         href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a>
                     in the <a href="https://cse.osu.edu/" target="_blank">Department
-                    of Computer Science and Engineering</a> at The Ohio State University (OSU). My research interests
-                    lie in Natural Language Processing (NLP)
-                    with an emphasis on <b>Question Answering</b> and <b>Privacy-preserving NLP</b>.
-                    I interned at Microsoft Research (Redmond) in 2022 summer, studying synthetic text generating with
-                    privacy guarantee.
-                    In summer 2021, I was a research intern at Tencent AI Lab (Seattle), where I worked on open-domain
-                    QA pre-training.
+                    of Computer Science and Engineering</a> at The Ohio State University (OSU).
+                    I have broad research interests in Natural Language Processing (NLP).
+                    Specifically, my research aims to build <b>safe, responsible and reliable </b>large language models
+                    (LLMs),
+                    which
+                <ul>
+                    <li>
+                        ensure faithfulness to factual world knowledge and truth
+                    </li>
+                    <li>
+                        generalize well to various unseen environments
+                    </li>
+                    <li>
+                        safeguard user data privacy
+                    </li>
+                </ul>
+
+                I also have extensive experience building LLMs for different applications (e.g., Question Answering).
+
+                I interned at Microsoft Research (Redmond) in 2022 summer, and at Tencent AI Lab (Bellevue) in 2021
+                summer.
                 <p>
                     <!--                <p>-->
                     <!--                        Prior to joining OSU, I received my B.E. in the <a href="http://cs.whu.edu.cn/" target="_blank">School-->
                     <!--                        of Computer Science</a> at Wuhan University (WHU), China in 2018. At WHU, I worked with <a-->
                     <!--                            href="http://zhangwenlab.cn/indexen.html">Prof. Wen Zhang</a> in data mining and bioinformatics.-->
                     <!--                    </p>-->
-                    <i class="flag icon"></i><span class="textred"> I'm looking for full-time positions (I will graduate in 2023)!
-                    Feel free to drop me an email if you have openings! </span> <a href="./Xiang%20Yue-CV.pdf"
-                                                                                   target="_blank">CV (Sept. 2022)</a>
+                    <i class="flag icon"></i><span class="textred"> I'm looking for full-time positions (I will graduate in Summer 2023)!
+                    Feel free to drop me an email if you have openings! </span>
                 </p>
 
                 <!--                    I'm fortunately working-->
@@ -123,9 +136,18 @@
                 <div class="discription">
                     <h3>What's New</h3>
                     <ul>
-                        <li>[Oct 2022] Check out our new preprint on <a href="https://arxiv.org/abs/2210.14348">Synthetic
-                            Text Generation with Differential Privacy</a>
-                            .
+                        <li>[May 2023] Check out our new preprint on <a href="https://arxiv.org/abs/2305.06311">Automatic
+                            Evaluation of Attribution by Large Language Models
+                        </a>
+
+                        <li>[May 2023] I'm honored to receive two research awards: <b>2023 CSE Graduate Research
+                            Award</b> and
+                            <b>2023 College of Engineering Exemplary Graduate Student Researcher</b>
+                        </li>
+
+                        <li>[May 2023] Our paper on <a href="https://arxiv.org/abs/2210.14348">Synthetic
+                            Text Generation with Differential Privacy</a> got accepted by <b>ACL 2023 main
+                            conference</b>
                         </li>
                         <li>[June 2022] Our OSU TacoBot team earned the <b>third-place honor ($50K)</b> in the first <a
                                 href="https://developer.amazon.com/alexaprize">Alexa Prize TaskBot Challenge</a>!
