--- a/publication.html
+++ b/publication.html
@@ -38,17 +38,29 @@
 			<div class="ui top attached">
 
 				<div class="content">
-                    <h3 class="title">NLP (Question Answering, Clinical NLP, Privacy-preserving NLP)</h3>
+<!--                    <h3 class="title">NLP (Question Answering, Clinical NLP, Privacy-preserving NLP)</h3>-->
                     <p>*: Equal Contributions</p>
                     <ul>
+                        <li>
+                            <p><a href="https://arxiv.org/abs/2305.06311" target="_blank">Automatic Evaluation of
+                                Attribution by Large Language Models
+                            </a><br>
+                                <b><u>Xiang Yue</u></b>, Boshi Wang, Kai Zhang, Ziru Chen, Yu Su, Huan Sun<br>
+                                <i>arXiv 2023</i><br>
+                                <a href="https://github.com/OSU-NLP-Group/AttrScore" target="_blank">[Code]</a>
+                            </p>
+                        </li>
+
 
                         <li>
                             <p><a href="https://arxiv.org/abs/2210.14348" target="_blank">Synthetic Text Generation with
                                 Differential Privacy: A Simple and Practical Recipe
                             </a><br>
                                 <b><u>Xiang Yue</u></b>, Huseyin A. Inan, Xuechen Li, Girish Kumar, Julia McAnallen,
+                                Hoda Shajari,
                                 Huan Sun, David Levitan, Robert Sim<br>
-                                <i>arXiv preprint</i><br>
+                                <i>61th Annual Meeting of the Association for Computational Linguistics <b>(ACL 2023
+                                    Main Conference)</b></i><br>
                             </p>
                         </li>
 
@@ -104,7 +116,8 @@
                         </li>
 
                         <li>
-                            <p><a href="" target="">Differential Privacy for Text Analytics via Natural Text
+                            <p><a href="https://aclanthology.org/2021.findings-acl.337.pdf" target="">Differential
+                                Privacy for Text Analytics via Natural Text
                                 Sanitization
                             </a><br>
                                 <b><u>Xiang Yue</u></b>*, Minxin Du*, Tianhao Wang, Yaliang Li, Huan Sun and Sherman S.
@@ -163,9 +176,9 @@
                             </p>
                         </li>
                     </ul>
-                    <div class="ui section divider"></div>
+                    <!--                    <div class="ui section divider"></div>-->
 
-                    <h3 class="title">Data Mining (Graph Embedding, Graph Mining, Bioinformatics)</h3>
+                    <!--                    <h3 class="title">Data Mining (Graph Embedding, Graph Mining, Bioinformatics)</h3>-->
                     <ul>
 
                         <li>
