--- a/publication.html
+++ b/publication.html
@@ -10,21 +10,21 @@
 </head>
 <body>
 
-			<!-- header -->
+<!-- header -->
 
 
-            <div class="ui fixed fitted top four item menu borderless">
-				<div class="ui container">
+<div class="ui fixed fitted top two item menu borderless">
+    <div class="ui container">
 
-					<a class="item" href="/"><i class="home icon"></i>Home</a>
-					<a class="item" href="publication"><i class="file text icon"></i>Publication</a>
-                    <!--<a class="item" href="talk"><i class="bell icon"></i>Talk</a>-->
-					<a class="item" href="misc"><i class="certificate icon"></i>Misc.</a>
-					<a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
+        <a class="item" href="/"><i class="home icon"></i>Home</a>
+        <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
+        <!--<a class="item" href="talk"><i class="bell icon"></i>Talk</a>-->
+        <!--        <a class="item" href="misc"><i class="certificate icon"></i>Misc.</a>-->
+        <!--        <a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>-->
 
-				</div>
+    </div>
 
-			</div>
+</div>
 
 		<!-- home -->
 		<div class="ui main text container">
@@ -47,7 +47,19 @@
                             </a><br>
                                 <b><u>Xiang Yue</u></b>, Boshi Wang, Kai Zhang, Ziru Chen, Yu Su, Huan Sun<br>
                                 <i>arXiv 2023</i><br>
+                                <a href="https://huggingface.co/datasets/osunlp/AttrScore" target="_blank">[Huggingface
+                                    Dataset]</a>
                                 <a href="https://github.com/OSU-NLP-Group/AttrScore" target="_blank">[Code]</a>
+                            </p>
+                        </li>
+
+                        <li>
+                            <p><a href="https://arxiv.org/pdf/2305.13160.pdf" target="_blank">Can ChatGPT Defend the
+                                Truth?
+                                Automatic Dialectical Evaluation Elicits LLMs’ Deficiencies in Reasoning
+                            </a><br>
+                                Boshi Wang, <b><u>Xiang Yue</u></b>, Huan Sun<br>
+                                <i>arXiv 2023</i><br>
                             </p>
                         </li>
 
@@ -61,6 +73,7 @@
                                 Huan Sun, David Levitan, Robert Sim<br>
                                 <i>61th Annual Meeting of the Association for Computational Linguistics <b>(ACL 2023
                                     Main Conference)</b></i><br>
+                                <a href="https://github.com/microsoft/dp-transformers" target="_blank">[Code]</a>
                             </p>
                         </li>
 
@@ -168,18 +181,18 @@
                             </p>
                         </li>
 
-                        <li>
-                            <p><a href="https://arxiv.org/abs/2003.03235" target="_blank">Practical Annotation
-                                Strategies for Question Answering Datasets</a><br>
-                                Bernhard Kratzwald, <b><u>Xiang Yue</u></b>, Huan Sun and Stefan Feuerriegel<br>
-                                <i>arXiv Preprint</i><br>
-                            </p>
-                        </li>
-                    </ul>
-                    <!--                    <div class="ui section divider"></div>-->
+                        <!--                        <li>-->
+                        <!--                            <p><a href="https://arxiv.org/abs/2003.03235" target="_blank">Practical Annotation-->
+                        <!--                                Strategies for Question Answering Datasets</a><br>-->
+                        <!--                                Bernhard Kratzwald, <b><u>Xiang Yue</u></b>, Huan Sun and Stefan Feuerriegel<br>-->
+                        <!--                                <i>arXiv Preprint</i><br>-->
+                        <!--                            </p>-->
+                        <!--                        </li>-->
 
-                    <!--                    <h3 class="title">Data Mining (Graph Embedding, Graph Mining, Bioinformatics)</h3>-->
-                    <ul>
+                        <!--                    <div class="ui section divider"></div>-->
+
+                        <!--                    <h3 class="title">Data Mining (Graph Embedding, Graph Mining, Bioinformatics)</h3>-->
+
 
                         <li>
                             <p><a href="https://academic.oup.com/bioinformatics/article/36/4/1241/5581350"
