--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="sixteen wide mobile twelve wide tablet twelve wide computer column">
                     <div class="content" id="bio-short">
-                        <p>PhD student, The Ohio State University, OH, U.S.</p>
+                        <p> Ph.D., The Ohio State University, OH, U.S.</p>
                         <p>I love to chat! Don't hesitate to send me a message anytime!</p>
                         <p><i class="mail icon"></i>Email: yue.149 AT osu DOT edu </p>
                         <p><i class="weixin icon"></i>Wechat: yuexiang96</p>
@@ -87,13 +87,12 @@
             <div class="content">
                 <h3>Bio</h3>
                 <p>
-                    I am currently a final year PhD student working with <a
-                        href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a>
-                    in the <a href="https://cse.osu.edu/" target="_blank">Department
-                    of Computer Science and Engineering</a> at The Ohio State University (OSU).
+                    I received my Ph.D. at The Ohio State University (OSU) where I was luckily working with <a
+                        href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> and <a
+                        href="https://ysu1989.github.io/" target="_blank">Prof. Yu Su</a> 
+                    from the OSU NLP Group. 
                     I have broad research interests in Natural Language Processing (NLP).
-                    Specifically, my research aims to build <b>safe, responsible and reliable </b>large language models
-                    (LLMs),
+                    Specifically, my research aims to build <b>safe, responsible and reliable </b>foundation models,
                     which
                 <ul>
                     <li>
