--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                 <div class="discription">
                     <h3>What's New</h3>
                     <ul>
+                        <li>[July 2023] Our paper on <a href="https://arxiv.org/abs/2210.14348">Synthetic
+                            Text Generation with Differential Privacy</a> was listed as one of the <a href="https://2023.aclweb.org/program/best_papers/">Honorable Mentions in ACL'23</a>!
+ 
                         <li>[May 2023] Check out our new preprints on <a href="https://arxiv.org/abs/2305.06311">Automatic
                             Evaluation of Attribution by Large Language Models</a> and <a
                                 href="https://arxiv.org/pdf/2305.13160.pdf">Can ChatGPT Defend the Truth?
