--- a/publication.html
+++ b/publication.html
@@ -72,7 +72,7 @@
                                 Hoda Shajari,
                                 Huan Sun, David Levitan, Robert Sim<br>
                                 <i>61th Annual Meeting of the Association for Computational Linguistics <b>(ACL 2023
-                                    Main Conference)</b></i><br>
+                                    Main Conference)</b></i><br> <span class="textred">(Best Paper Honorable Mention)</span>
                                 <a href="https://github.com/microsoft/dp-transformers" target="_blank">[Code]</a>
                             </p>
                         </li>
