--- a/publication.html
+++ b/publication.html
@@ -42,6 +42,20 @@
                     <p>*: Equal Contributions</p>
                     <ul>
                         <li>
+                            <p><a href="https://arxiv.org/pdf/2309.05653.pdf" target="_blank">MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning
+                            </a><br>
+                                <b><u>Xiang Yue*</u></b>, Xingwei Qu, Ge Zhang, Yao Fu, Wenhao Huang, Huan Sun, Yu Su, Wenhu Chen*<br>
+                                <i>arXiv 2023</i><br>
+                                <a href="https://tiger-ai-lab.github.io/MAmmoTH/" target="_blank">[Project Page]</a>
+                                <a href="https://huggingface.co/TIGER-Lab/MAmmoTH-Coder-7B" target="_blank">[Huggingface
+                                    Models]</a>
+                                <a href="https://huggingface.co/datasets/TIGER-Lab/MathInstruct" target="_blank">[Huggingface
+                                    Dataset]</a>
+                                <a href="https://github.com/TIGER-AI-Lab/MAmmoTH" target="_blank">[Code]</a>
+                            </p>
+                        </li>
+
+                        <li>
                             <p><a href="https://arxiv.org/abs/2305.06311" target="_blank">Automatic Evaluation of
                                 Attribution by Large Language Models
                             </a><br>
