--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                 <div class="discription">
                     <h3>What's New</h3>
                     <ul>
+                        <li>[Sept 2023] Check out our recent preprint on mathmatical reasoning <a href="https://tiger-ai-lab.github.io/MAmmoTH/">🦣 MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning</a> </li>
+                        🦣 <b>MAmmoTH series substantially outperform existing open-source models on nine math reasoning datasets across
+                        all scales with an average accuracy gain between 16% and 32%. </b>
                         <li>[July 2023] Our paper on <a href="https://arxiv.org/abs/2210.14348">Synthetic
                             Text Generation with Differential Privacy</a> was listed as one of the <a href="https://2023.aclweb.org/program/best_papers/">Honorable Mentions in ACL'23</a>!
  
