--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 <div class="discription">
                     <h3>What's New</h3>
                     <ul>
+                        <li>[Oct 2023] Check out our two accepted EMNLP papers on "Evaluting Attribution" and "Evaluating Reasoning" </li>
                         <li>[Sept 2023] Check out our recent preprint on mathmatical reasoning <a href="https://tiger-ai-lab.github.io/MAmmoTH/">🦣 MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning</a> </li>
                         🦣 <b>MAmmoTH series substantially outperform existing open-source models on nine math reasoning datasets across
                         all scales with an average accuracy gain between 16% and 32%. </b>
