--- a/publication.html
+++ b/publication.html
@@ -60,7 +60,7 @@
                                 Attribution by Large Language Models
                             </a><br>
                                 <b><u>Xiang Yue</u></b>, Boshi Wang, Kai Zhang, Ziru Chen, Yu Su, Huan Sun<br>
-                                <i>arXiv 2023</i><br>
+                                <i>EMNLP 2023, Findings</i><br>
                                 <a href="https://huggingface.co/datasets/osunlp/AttrScore" target="_blank">[Huggingface
                                     Dataset]</a>
                                 <a href="https://github.com/OSU-NLP-Group/AttrScore" target="_blank">[Code]</a>
@@ -73,7 +73,7 @@
                                 Automatic Dialectical Evaluation Elicits LLMs’ Deficiencies in Reasoning
                             </a><br>
                                 Boshi Wang, <b><u>Xiang Yue</u></b>, Huan Sun<br>
-                                <i>arXiv 2023</i><br>
+                                <i>EMNLP 2023, Findings</i><br>
                             </p>
                         </li>
 
