--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <p> Ph.D., The Ohio State University, OH, U.S.</p>
                         <p>I love to chat! Don't hesitate to send me a message anytime!</p>
                         <p><i class="mail icon"></i>Email: yue.149 AT osu DOT edu </p>
-                        <p><i class="weixin icon"></i>Wechat: yuexiang96</p>
+                        <!-- <p><i class="weixin icon"></i>Wechat: yuexiang96</p> -->
                         <!--<p><i class="home icon"></i>Group: <a-->
                         <!--href="https://u.osu.edu/ihudas/" target="_blank">Honored to be part of the wonderful team!</a></p>-->
 
@@ -72,8 +72,7 @@
                                                         target="_blank">Linkedin</a>
                         <!--                        <i class="book icon"></i><a href="./Xiang%20Yue-CV.pdf" target="_blank">CV (Sept. 2022)</a>-->
                         <i class="twitter icon"></i><a href="https://twitter.com/xiangyue96" target="_blank">Twitter</a>
-
-
+                        <i class="weixin icon"></i><a href="images/wechat.jpg" target="_blank">Wechat</a>
                         <br>
                         <br>
                     </div>
