--- a/publication.html
+++ b/publication.html
@@ -42,6 +42,24 @@
                     <p>*: Equal Contributions</p>
                     <ul>
                         <li>
+                            <p>🔥<a href="https://arxiv.org/abs/2311.16502.pdf" target="_blank">MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI
+
+                            </a><br>
+                                <b><u>Xiang Yue</u></b>, Yuansheng Ni, Kai Zhang, Tianyu Zheng,
+                                Ruoqi Liu, Ge Zhang, Samuel Stevens, Dongfu Jiang, Weiming Ren, Yuxuan Sun, 
+                                Cong Wei, Botao Yu, Ruibin Yuan, Renliang Sun, Ming Yin, Boyuan Zheng, 
+                                Zhenzhu Yang, Yibo Liu, Wenhao Huang,
+                                Huan Sun, Yu Su, Wenhu Chen<br>
+                                <i>arXiv 2023</i><br>
+                                <a href="https://mmmu-benchmark.github.io/" target="_blank">[Project Page]</a>
+                                
+                                <a href="https://huggingface.co/datasets/MMMU/MMMU" target="_blank">[Huggingface
+                                    Dataset]</a>
+                                <a href="https://github.com/MMMU-Benchmark/MMMU" target="_blank">[Code]</a>
+                            </p>
+                        </li>
+
+                        <li>
                             <p><a href="https://arxiv.org/pdf/2309.05653.pdf" target="_blank">MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning
                             </a><br>
                                 <b><u>Xiang Yue*</u></b>, Xingwei Qu, Ge Zhang, Yao Fu, Wenhao Huang, Huan Sun, Yu Su, Wenhu Chen*<br>
