--- a/index.html
+++ b/index.html
@@ -105,10 +105,9 @@
                     </li>
                 </ul>
 
-                I also have extensive experience building LLMs for different applications (e.g., Question Answering).
+                I also have extensive experience building LLMs for different applications.
 
-                I interned at Microsoft Research (Redmond) in 2022 summer, and at Tencent AI Lab (Bellevue) in 2021
-                summer.
+                I interned at Microsoft Research (Redmond).
                 <!--                <p>-->
                 <!--                <p>-->
                 <!--                        Prior to joining OSU, I received my B.E. in the <a href="http://cs.whu.edu.cn/" target="_blank">School-->
