--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
                 <div class="discription">
                     <h3>What's New</h3>
                     <ul>
+                        <li>[Feb 2024] Check out our <a href="https://opencodeinterpreter.github.io/">OpenCodeInterpreter</a></li>
                         <li>[Nov 2023] 
-                            ️‍<b>🔥 Check out our new multimodal benchmark MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI </b> </li>
+                            ️‍<b>Check out our new multimodal benchmark MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI </b> </li>
 
                         <li>[Oct 2023] Check out our two accepted EMNLP papers on "Evaluting Attribution" and "Evaluating Reasoning" </li>
                         <li>[Sept 2023] Check out our recent preprint on mathmatical reasoning <a href="https://tiger-ai-lab.github.io/MAmmoTH/">🦣 MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning</a> </li>
