--- a/publication.html
+++ b/publication.html
@@ -42,14 +42,14 @@
                     <p>*: Equal Contributions; ✝: My Advisee</p>
                     <ul>
                         <li>
-                            <p>🔥<a href="https://arxiv.org/abs/2302.05630" target="_blank">OpenCodeInterpreter: Integrating Code Generation with Execution and Refinement
+                            <p>🔥<a href="https://arxiv.org/abs/2402.14658" target="_blank">OpenCodeInterpreter: Integrating Code Generation with Execution and Refinement
                             </a><br>
                                 Tianyu Zheng*✝, Ge Zhang*, Tianhao Shen*, Xueling Liu, Bill Yuchen Lin, Jie Fu, Wenhu Chen, <b><u>Xiang Yue</u></b>
                                 <i>arXiv 2024</i><br>
                                 <a href="https://opencodeinterpreter.github.io/" target="_blank">[Project Page]</a>
-                                <a href="https://huggingface.co/datasets/OpenCodeInterpreter/Code-Feedback" target="_blank">[Huggingface Dataset]</a>
+                                <a href="https://huggingface.co/datasets/m-a-p/Code-Feedback/" target="_blank">[Huggingface Dataset]</a>
                                 <a href="https://huggingface.co/m-a-p/OpenCodeInterpreter-DS-6.7B" target="_blank">[Huggingface Models]</a>
-                                <a href="https://github.com/OpenCodeInterpreter" target="_blank">[GitHub]</a>
+                                <a href="https://github.com/OpenCodeInterpreter/OpenCodeInterpreter" target="_blank">[GitHub]</a>
                             </p>
                         </li>
 
