--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="discription">
                     <h3>What's New</h3>
                     <ul>
-                        <li>[Feb 2024] Check out our <a href="https://opencodeinterpreter.github.io/">OpenCodeInterpreter</a></li>
+                        <li>[Feb 2024] Check out our <a href="https://opencodeinterpreter.github.io/">OpenCodeInterpreter</a>: Integrating Code Generation with Execution and Refinement</li>
                         <li>[Nov 2023] 
                             ️‍<b>Check out our new multimodal benchmark MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI </b> </li>
 
