--- a/publication.html
+++ b/publication.html
@@ -44,7 +44,7 @@
                         <li>
                             <p>🔥<a href="https://arxiv.org/abs/2402.14658" target="_blank">OpenCodeInterpreter: Integrating Code Generation with Execution and Refinement
                             </a><br>
-                                Tianyu Zheng*✝, Ge Zhang*, Tianhao Shen*, Xueling Liu, Bill Yuchen Lin, Jie Fu, Wenhu Chen, <b><u>Xiang Yue</u></b>
+                                Tianyu Zheng*✝, Ge Zhang*, Tianhao Shen*, Xueling Liu*, Bill Yuchen Lin, Jie Fu, Wenhu Chen, <b><u>Xiang Yue</u></b>
                                 <i>arXiv 2024</i><br>
                                 <a href="https://opencodeinterpreter.github.io/" target="_blank">[Project Page]</a>
                                 <a href="https://huggingface.co/datasets/m-a-p/Code-Feedback/" target="_blank">[Huggingface Dataset]</a>
