--- a/publication.html
+++ b/publication.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-	<title>Xiang Yue's Homepage</title>
+    <meta content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.5, user-scalable=yes"
+          name="viewport">
+    <meta charset="utf-8">
+    <title>Xiang Yue's Homepage</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.css">
     <script src="./stylesheets/jquery.js"></script>
@@ -11,29 +13,19 @@
 <body>
 
 <!-- header -->
-
-
-<div class="ui fixed fitted top two item menu borderless">
+<div class="ui fixed inverted menu">
     <div class="ui container">
-
-        <a class="item" href="/"><i class="home icon"></i>Home</a>
-        <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
-        <!--<a class="item" href="talk"><i class="bell icon"></i>Talk</a>-->
-        <!--        <a class="item" href="misc"><i class="certificate icon"></i>Misc.</a>-->
-        <!--        <a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>-->
-
+        <a href="#" class="header item">Xiang Yue</a>
+        <a href="publication.html" class="item">Publications</a>
     </div>
-
 </div>
 
 		<!-- home -->
 		<div class="ui main text container">
             <div class="ui huge header">Selected Publications</div>
-            Full list: <a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ" target="_blank">(Google
+            Full list: <a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ&view_op=list_works&sortby=pubdate" target="_blank">(Google
             Scholar)</a>,
             <a href="https://www.semanticscholar.org/author/Xiang-Yue/145548079" target="_blank">(Semantic Scholar)</a>,
-            <a href="https://www.researchgate.net/profile/Xiang_Yue6" target="_blank">(Researchgate)</a>
-
             <div class="ui section divider"></div>
 			<div class="ui top attached">
 
@@ -42,7 +34,7 @@
                     <p>*: Equal Contributions; ✝: My Advisee</p>
                     <ul>
                         <li>
-                            <p>🔥<a href="https://arxiv.org/abs/2402.14658" target="_blank">OpenCodeInterpreter: Integrating Code Generation with Execution and Refinement
+                            <p><a href="https://arxiv.org/abs/2402.14658" target="_blank">OpenCodeInterpreter: Integrating Code Generation with Execution and Refinement
                             </a><br>
                                 Tianyu Zheng*✝, Ge Zhang*, Tianhao Shen*, Xueling Liu*, Bill Yuchen Lin, Jie Fu, Wenhu Chen, <b><u>Xiang Yue</u></b>
                                 <i>arXiv 2024</i><br>
