--- a/index.html
+++ b/index.html
@@ -100,20 +100,16 @@
         </div>
 
         <div class="four wide column">
-            <a href="https://twitter.com/xiangyue96?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @xiangyue96</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <a class="twitter-timeline" data-height="1000" href="https://twitter.com/xiangyue96?ref_src=twsrc%5Etfw">Tweets by xiangyue96</a>
+            <a href="https://twitter.com/xiangyue96?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @xiangyue96</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+            <a class="twitter-timeline" data-height="1000" href="https://twitter.com/xiangyue96?ref_src=twsrc%5Etfw" style="margin-bottom: 20px;">Tweets by xiangyue96</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a href='https://mapmyvisitors.com/web/1bw0f'  title='Visit tracker'><img src='https://mapmyvisitors.com/map.png?cl=ffffff&w=a&t=m&d=l2PBJ1PhcW8FCh7bD9PMgAJUBCQ_cYPIOTZam_ZychU&co=2d78ad&ct=ffffff'/></a>        </div>
     </div>
 
     <br><br>
     <div class="ui section divider"></div>
-                <p>Last Updated: 04/2024</p>
-                <div class="content" id="visit-map">
-                    <script id="clustrmaps"
-                            src="//cdn.clustrmaps.com/map_v2.js?d=YG4fd7cKyrWe5QsX9iygEQ2x0a4jIRTeWb-qYyJ0xsI&cl=ffffff&w=a"
-                            type="text/javascript"></script>
-                </div>
+    <p>Last Updated: 04/2024</p>
     </div>
 </div>
 </body>
