--- a/index.html
+++ b/index.html
@@ -102,9 +102,14 @@
         <div class="four wide column">
             <a href="https://twitter.com/xiangyue96?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @xiangyue96</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <a class="twitter-timeline" data-height="1000" href="https://twitter.com/xiangyue96?ref_src=twsrc%5Etfw" style="margin-bottom: 10%;">Tweets by xiangyue96</a>
+            <a class="twitter-timeline" data-height="1000" href="https://twitter.com/xiangyue96?ref_src=twsrc%5Etfw" ">Tweets by xiangyue96</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <a href='https://mapmyvisitors.com/web/1bw0f'  title='Visit tracker'><img src='https://mapmyvisitors.com/map.png?cl=ffffff&w=a&t=m&d=l2PBJ1PhcW8FCh7bD9PMgAJUBCQ_cYPIOTZam_ZychU&co=2d78ad&ct=ffffff' style="width: 100%;"/></a>        </div>
+            <div style="display: flex; justify-content: center; margin-top: 5%;">
+                <a href="https://mapmyvisitors.com/web/1bw0f" title="Visit tracker">
+                  <img src="https://mapmyvisitors.com/map.png?d=l2PBJ1PhcW8FCh7bD9PMgAJUBCQ_cYPIOTZam_ZychU&cl=ffffff" " />
+                </a>
+            </div>
+        </div>
     </div>
 
     <br><br>
